update message error code